Admin Users tab: Table overflow issue fixed

--- a/public/stylesheets/admin/admin.css
+++ b/public/stylesheets/admin/admin.css
@@ -5,22 +5,21 @@
 }
 
 .admin-sidebar-col {
-    max-width: 250px;
-    width: 100%;
+    width: 290px;
 }
 
 .admin-sidebar {
-    max-width: 250px;
+    width: 100%;
     height: 100%;
     padding: 20px 15px;
-    width: 100%;
     background: #101010;
     box-shadow: 1px 0px 14px 0px #00000078;
 }
 
 .admin-content {
-    width: 100%;
+    width: -webkit-fill-available;
     height: 100%;
+    overflow: auto;
 }
 
 .admin-heading {
